layout bug fixing

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -46,7 +46,7 @@ body{
     }
 
     body{
-        overflow-y: hidden;
+        overflow-x: hidden;
     }
 
     .row{
